"""create transfer table

Revision ID: create_transfer_table
Revises: create_wallet_table
Create Date: 2025-01-21 10:00:00.000000

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'create_transfer_table'
down_revision: Union[str, None] = 'create_wallet_table'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('transfers',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('amount', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('description', sa.String(), nullable=True),
    sa.Column('source_wallet_id', sa.Integer(), nullable=False),
    sa.Column('target_wallet_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['source_wallet_id'], ['wallets.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['target_wallet_id'], ['wallets.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_transfers_id'), 'transfers', ['id'], unique=False)
    op.create_index(op.f('ix_transfers_source_wallet_id'), 'transfers', ['source_wallet_id'], unique=False)
    op.create_index(op.f('ix_transfers_target_wallet_id'), 'transfers', ['target_wallet_id'], unique=False)
    op.create_index(op.f('ix_transfers_user_id'), 'transfers', ['user_id'], unique=False)
    op.create_index(op.f('ix_transfers_created_at'), 'transfers', ['created_at'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_transfers_created_at'), table_name='transfers')
    op.drop_index(op.f('ix_transfers_user_id'), table_name='transfers')
    op.drop_index(op.f('ix_transfers_target_wallet_id'), table_name='transfers')
    op.drop_index(op.f('ix_transfers_source_wallet_id'), table_name='transfers')
    op.drop_index(op.f('ix_transfers_id'), table_name='transfers')
    op.drop_table('transfers')
    # ### end Alembic commands ###
